# YADRO-task

./: CMakeLists.txt  config.json  main.cpp  output.txt
Sorter/: Sorter.cpp  Sorter.h
TapeController/: FileTapeController.cpp  FileTapeController.h
temp/: tape1.txt  tape2.txt  tape3.txt  tape4.txt  testTape.txt
